--- a/package.json
+++ b/package.json
@@ -6,11 +6,19 @@
     "@htmlacademy/editorconfig-cli": "1.0.0",
     "autoprefixer": "10.4.0",
     "browser-sync": "2.27.7",
+    "del": "^6.1.0",
     "gulp": "4.0.2",
+    "gulp-htmlmin": "^5.0.1",
     "gulp-less": "5.0.0",
+    "gulp-libsquoosh": "^1.1.2",
     "gulp-plumber": "1.2.1",
     "gulp-postcss": "9.0.1",
+    "gulp-rename": "^2.0.0",
+    "gulp-squoosh": "^0.9.0",
+    "gulp-svgo": "^2.2.1",
+    "gulp-terser": "^2.1.0",
     "postcss": "8.3.11",
+    "postcss-csso": "^6.0.0",
     "stylelint": "13.13.1",
     "stylelint-config-htmlacademy": "0.1.11"
   },
@@ -39,5 +47,9 @@
   "engines": {
     "node": "^16"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "gulp-svgmin": "^4.1.0",
+    "terser": "^5.13.1"
+  }
 }
